--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -19,8 +19,8 @@ parameters:
     secret:            ThisTokenIsNotSoSecretChangeIt
     
     # Config JWT (JSON Web Token)
-    jwt_private_key_path: '%kernel.root_dir%/../var/jwt/private.pem' # ssh private key path
-    jwt_public_key_path:  '%kernel.root_dir%/../var/jwt/public.pem'  # ssh public key path
+    jwt_private_key_path: '%kernel.project_dir%/var/jwt/private.pem' # ssh private key path
+    jwt_public_key_path:  '%kernel.project_dir%/var/jwt/public.pem'  # ssh public key path
     jwt_key_pass_phrase:  'happyapi'                                 # ssh key pass phrase
     jwt_token_ttl:        3600
     
