--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -38,7 +38,7 @@ services:
 
     app.mail_forgot_password_listener:
         class: AppBundle\EventListener\MailForgotPasswordListener
-        arguments: ['@mailer']
+        arguments: ['@twig', '@mailer']
         tags:
             - { name: kernel.event_listener, event: forgot.password.event.email_fogot_password_event, method: onMailForgotPasswordEvent }
 
