--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,7 +23,7 @@ security:
             stateless: true
             guard:
                 authenticators:
-                    - app.jwt_token_authenticator
+                    - AppBundle\Security\JwtAuthenticator 
 
     access_control:
         - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
