--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -32,13 +32,10 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
-    app.jwt_token_authenticator:
-        class: AppBundle\Security\JwtAuthenticator
-        arguments: ['@doctrine.orm.entity_manager', '@lexik_jwt_authentication.encoder']
 
-    app.mail_forgot_password_listener:
-        class: AppBundle\EventListener\MailForgotPasswordListener
+    AppBundle\EventListener\MailForgotPasswordListener:
         arguments: ['@twig', '@mailer']
         tags:
             - { name: kernel.event_listener, event: forgot.password.event.email_fogot_password_event, method: onMailForgotPasswordEvent }
+
 
