--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "phpunit/phpunit": "^6.0",
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "scripts": {
         "symfony-scripts": [
